--- a/softapy/public/index.html
+++ b/softapy/public/index.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="softapy-widget" data-dark="true" data-no-author="true" userId="1"></div>
+    <div class="softapy-widget" userId="1" popupId="1"></div>
   </body>
 </html>
