--- a/convertPopup/widget/hello.html
+++ b/convertPopup/widget/hello.html
@@ -5,6 +5,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="https://www.pythonanywhere.com/user/egemen1995/files/home/egemen1995/index.js"></script>
-    <div class="softapy-widget" userId="1" popupId="1">hello</div>
+    <div class="convert-popup" userId="1" popupId="1">hello</div>
   </body>
 </html>
