--- a/convertPopup/public/index.html
+++ b/convertPopup/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-  <body>
+<html >
+  <body style="background-color:grey;text-align:center">
     <script name='convert-popup' userId="2" popupId="2" defer>
     </script>
   </body>
