--- a/convertPopup/public/index.html
+++ b/convertPopup/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html >
   <body style="background-color:grey;text-align:center">
-    <script name='convert-popup' userId="1" popupId="1" defer>
     </script>
+    <script name="convert-popup" userid="1" popupid="1" defer="defer"></script>
   </body>
 </html>
