--- a/convertPopup/public/index.html
+++ b/convertPopup/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html >
-  <body style="background-color:grey;text-align:center">
+  <body style="background-color:green;text-align:center">
     </script>
     <script name="convert-popup" userid="7" popupid="15" defer="defer"></script>
   </body>
